# rust-restaurant-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml
client/: Cargo.toml
client/src/: main.rs
db/.mongodb/mongosh/: 6263bb3b9c61913f625f2708_log  6263bd11def6ef84f9b17eae_log  6263bdc1988dc4e099d57372_log  6263be14a4d50a3ab5bd3449_log  config  mongosh_repl_history
scripts/: mongo-init.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs  test_utils.rs  utils.rs
server/src/api/: items.rs  items_test.rs  meta.rs  meta_test.rs  mod.rs  tables.rs  tables_test.rs  test.rs
server/src/model/: item.rs  table.rs
server/src/repository/: db.rs  mod.rs
src/: main.rs
src/api/: items.rs  mod.rs  tables.rs  test.rs
src/model/: item.rs  table.rs
src/repository/: db.rs
