[package]
name = "restaurant"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.1"
serde_json = "1.0.79"
mongodb = "2.2.1"
env_logger = "0.9.0"
nanoid = "0.4.0"
chrono = "0.4.0"
futures = "0.3"

[dependencies.serde]
version = "1.0.136"
features = [
    "derive"
]

[profile.dev]
split-debuginfo = "unpacked"
